--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -181,7 +181,7 @@
         <service
             android:name=".service.DaemonService"
             android:exported="true"
-            android:process=":pushservice">
+            android:process=":daemon">
         </service>
         <service
             android:name="com.baidu.location.f"
