兼容6.0 seekbar 按钮显示问题 增加timer拖动中按钮状态

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.kaku.weac"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
 
@@ -111,5 +111,5 @@ dependencies {
     compile 'com.umeng:fb:5.4.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile files('libs/umeng-update-v2.6.0.1.jar')
-    compile 'com.karumi:dexter:2.2.1'
+//    compile 'com.karumi:dexter:2.2.1'
 }
