--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -200,7 +200,7 @@
             android:value="56c1ca2167e58ec5d600086f"/>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Umeng"/>
+            android:value="fir"/>
         <!--
                     <meta-data
                     android:name="UMENG_CHANNEL"
