修复 初次使用天气闹钟天气提示功能之前没有设置默认城市不显示天气提示信息

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-//        manifestPlaceholders = [ UMENG_CHANNEL_VALUE:"bugly" ]
+        manifestPlaceholders = [UMENG_CHANNEL_VALUE: "kaku"]
     }
 
 
@@ -26,8 +26,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
+            minifyEnabled false
+            zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -63,7 +63,7 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude '.readme'
     }
-
+/*
     productFlavors {
         bugly {}
         _360 {}
@@ -86,7 +86,7 @@ android {
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
-    }
+    }*/
 }
 /*    sourceSets {
         main {
