修复三星a8 cursor空指针问题

--- a/workspace/settings.gradle
+++ b/workspace/settings.gradle
@@ -1,3 +1,3 @@
-include ':PagerSlidingTabStrip', ':daemon', ':SwipeBackLayout'
+include ':PagerSlidingTabStrip', ':daemon', ':SwipeBackLayout', ':litepal'
 include ':WeAC'
 include ':PullToRefresh'
