--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -102,7 +102,6 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile project(':PagerSlidingTabStrip')
     compile project(':PullToRefresh')
-    compile 'org.litepal.android:core:1.3.1'
     compile files('libs/locSDK_6.13.jar')
     compile project(':daemon')
     compile 'com.android.support:support-v4:23.1.1'
@@ -129,5 +128,6 @@ dependencies {
     compile 'com.umeng:fb:5.4.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile files('libs/umeng-update-v2.6.0.1.jar')
-//    compile 'com.karumi:dexter:2.2.1'
+    //    compile 'com.karumi:dexter:2.2.1'
+    compile project(':litepal')
 }
