--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -58,16 +58,30 @@ android {
     }
 
 // gradle bug 去掉release编译警告
-/*    packagingOptions {
+    packagingOptions {
+/*        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude '.readme'*/
+
+/*        exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
-        exclude '.readme'
-    }*/
-    productFlavors {
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'*/
+
+        exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
+        exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
+    }
+/*    productFlavors {
         _360 {}
         wandoujia {}
         yingyongbao {}
-/*        bugly {}
+*//*        bugly {}
         _91zhushou {}
         baidu {}
         uc {}
@@ -80,12 +94,12 @@ android {
         xiaomi {}
         meizu {}
         lianxiang {}
-        google {}*/
+        google {}*//*
 
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
-    }
+    }*/
 }
 /*    sourceSets {
         main {
@@ -104,15 +118,15 @@ dependencies {
     compile project(':PullToRefresh')
     compile files('libs/locSDK_6.13.jar')
     compile project(':daemon')
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.squareup.okhttp:okhttp:2.6.0'
     compile 'com.squareup.okio:okio:1.6.0'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile files('libs/zxing-4.7.3.jar')
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:design:23.3.0'
     compile 'me.itangqi.waveloadingview:library:0.2.0'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.4@aar') {
         transitive = true
