新增摇一摇找回删除的闹钟功能

--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -118,6 +118,9 @@
             android:name=".activities.TimerOnTimeActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
         <activity
+            android:name=".activities.ShakeExplainActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity
             android:name=".activities.RecordDeleteBatchActivity"
             android:theme="@style/Transparent.Light"/>
         <activity
