--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -26,8 +26,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
+            minifyEnabled false
+            zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -77,7 +77,7 @@ android {
         exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
         exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
     }
-    productFlavors {
+/*    productFlavors {
         _360 {}
         wandoujia {}
         yingyongbao {}
@@ -99,7 +99,7 @@ android {
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
-    }
+    }*/
 
     lintOptions {
         checkReleaseBuilds false
