--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.kaku.weac"
         minSdkVersion 14
         targetSdkVersion 19
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.1"
 
         manifestPlaceholders = [UMENG_CHANNEL_VALUE: "Umeng"]
     }
@@ -77,7 +77,7 @@ android {
         exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
         exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
     }
-/*    productFlavors {
+    productFlavors {
         _360 {}
         wandoujia {}
         yingyongbao {}
@@ -99,7 +99,7 @@ android {
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
-    }*/
+    }
 
     lintOptions {
         checkReleaseBuilds false
