修复计时器不同步问题

--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -188,6 +188,9 @@
             android:process=":daemon">
         </service>
         <service
+            android:name=".service.CountDownService">
+        </service>
+        <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":location">
