--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -26,12 +26,16 @@ android {
 
     buildTypes {
         debug {
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+
             minifyEnabled false
             zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         release {
+            buildConfigField "boolean", "LOG_DEBUG", "false"
+
             // 是否生成debug apk
             debuggable false
             //混淆
