加强闹钟响铃，针对5.0系统添加白色保活方案，针对6.0系统后台广播与前台服务保持在一个进程

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -85,7 +85,7 @@ android {
 //        _360 {}
 //        wandoujia {}
 //        yingyongbao {}
-          baidu {}
+//          baidu {}
 //        bugly {}
 //        _91zhushou {}
 //        baidu {}
