--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -163,7 +163,7 @@
 
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
-            android:process=":gray">
+            android:process=":daemon">
             <!--广播定义单独进程，在6.0上接受不到，不定义进程退到后台也接受不到。-->
             <!--广播和后台运行的服务保持在一个线程，只要服务不死，这样就都可以接受到广播了-->
             <!--<intent-filter>-->
@@ -201,15 +201,10 @@
         </receiver>
 
         <service
-            android:name=".service.GrayService"
+            android:name=".service.DaemonService$DaemonInnerService"
             android:enabled="true"
             android:exported="false"
-            android:process=":gray"/>
-        <service
-            android:name=".service.GrayService$GrayInnerService"
-            android:enabled="true"
-            android:exported="false"
-            android:process=":gray"/>
+            android:process=":daemon"/>
         <service
             android:name=".broadcast.WakeReceiver$WakeNotifyService"
             android:enabled="true"
