某些机型点击主题图片没有反映问题为overscroll库的bug

--- a/WeAC/src/main/AndroidManifest.xml
+++ b/WeAC/src/main/AndroidManifest.xml
@@ -116,6 +116,7 @@
             android:theme="@style/Theme.MyDialog"/>
         <activity
             android:name=".activities.TimerOnTimeActivity"
+            android:launchMode="singleTask"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
         <activity
             android:name=".activities.ShakeExplainActivity"
